footer style updated

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
           name="search"
           id="search-input"
           autocomplete="off"
+          spellcheck="false"
+          aria-live="polite"
           placeholder="Search Google or type a URL"
         />
         <img
